# wireshark-mcp-1

./: .gitignore  README.md  advanced_captures.py  pyproject.toml  pyshark_mcp.py  pyshark_mcp_test.py
.cursor/skills/wireshark-mcp/: SKILL.md
.github/workflows/: ci.yml  pages.yml
docs/: Clients.md  README.md  Security.md  Setup.md  Troubleshooting.md
examples/: mcpServers.wireshark.json
scripts/: build_docs_site.py  smoke_test_mcp.py
src/wireshark_mcp/: __init__.py  __main__.py  clients.py  context.py  formatting.py  interfaces.py  preflight.py  prompts.py  resources.py  security.py  server.py  tshark_runner.py
src/wireshark_mcp/tools/: __init__.py  analysis.py  capture.py  diagnostics.py  environment.py  http_dns.py
tests/: test_package_surface.py  test_path_and_filter_security.py  test_preflight.py  test_quick_capture_security.py
