[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyshark-mcp"
version = "0.1.0"
description = "PyShark integration for Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyshark>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["pyshark_mcp.py", "advanced_captures.py"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.black]
line-length = 88
target-version = ["py38"] 
