[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyshark-mcp"
version = "0.2.2"
description = "TShark/Wireshark MCP server for network packet analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Wireshark MCP contributors"},
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyshark>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.0.1",
]

[project.scripts]
wireshark-mcp = "wireshark_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wireshark_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/wireshark_mcp",
    "tests",
    "docs",
    "examples",
    "README.md",
    "pyshark_mcp.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that require local Npcap/TShark live capture",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ["py310"]
